fix: remove gap in resume header

--- a/src/pages/ResumeModal/ResumeModal.scss
+++ b/src/pages/ResumeModal/ResumeModal.scss
@@ -19,6 +19,7 @@
     &_right {
       display: flex;
       flex-direction: column;
+      gap: 0;
     }
   }
 
